pywbem-0.7.0 XXXX-XX-XX

  BUG FIXES:

    * Fix syntax error in CIM DTDVERSION error path.  Allow KEYVALUE
      VALUETYPE attribute to be optional as specified in the DTD.  (Andreas Linke)

    * Added parsing of InvokeMethod return value and output parameters
      for Twisted Python client.  (Tim Potter)

    * Fixed cim_provider2.py to properly support shutdown() and can_unload()
      (called from CMPI cleanup() functions).  Support was recently added 
      to cmpi-bindings for this.  (Bart Whiteley)

    * Fixed XML parsing to accept SFCB-style embedded instance parameters.
      (Mihai Ibanescu)

  PACKAGING:

    * Added LICENSE.txt file to release.  (Tim Potter)

pywbem-0.7  2008-12-12

  BUG FIXES:

    * Fixed enumInstances and references in cim_provider to do a deep
      copy of the model before filtering instances so provider writers
      are less surprised.  (Bart Whiteley)

    * Added CIMDateTime.__cmp__() so that CIMDateTime instances can be
      compared.  (Bart Whiteley)

    * Fixed data types of method return values for python providers.
      (Bart Whiteley)

    * Fixed REF array out parameters in tupleparse.py.
      (Bart Whiteley)

    * Fixed Array parameters with no elements.  (Bart Whiteley)

    * Fixed precision for real32 and real64 types.  (Bart Whiteley)
 
    * Fixed Array properties where is_array isn't set in __init__.
      (Bart Whiteley)

    * Added NocaseDict.__cmp__(self, other).  (Bart Whiteley)

    * Fixed WBEMConnection.__repr__ for anonymous connections. (Tim Potter)

    * Fixed XML encoding of CIMQualifierDeclarations.  (Bart Whiteley)
    
    * Fixed EnumerateQualifiers if there are no qualifiers.  (Bart Whiteley)
    
    * Fixed InvokeMethod to only send a LOCALCLASSPATH or LOCALINSTANCEPATH,
      not a CLASSPATH or INSTANCEPATH.  (Bart Whiteley)

    * Fix unexpected line break in basic auth header for long
      credentials.  (Daniel Hiltgen)
